# pai

./: .gitignore  ARCHITECTURE.md  FUTURE_FEATURES.md  PAI_CONVERSION.md  README.md  REFACTOR_NEXT_STEPS.md  TODO.md  VISION.md  pai.toml  polyglot.toml  pyproject.toml
.github/workflows/: ci.yml
custom_tools/: __init__.py  code_editor.py  code_generator.py  data_converter.py  developer_tools.py  file_system.py  http_client.py  shell.py  web.py
docs/: LOGGING.md  PRICING.md  TOOLS.md  TOOL_TUTORIAL.md  UI_ARCHITECTURE.md
docs/providers/: ANTHROPIC.md
pai/: client.py  commands.py  display.py  log_utils.py  models.py  pai.py  pricing.py  tools.py  utils.py
pai/orchestration/: __init__.py  arena.py  base.py  default.py  legacy_agent.py  multiply.py
pai/protocols/: __init__.py  anthropic_adapter.py  base_adapter.py  legacy_completion_adapter.py  ollama_adapter.py  openai_chat_adapter.py
pai/templates/: conversation.html  gptwink_format.html
prompts/: code_editor.md  code_refactor.md  judge.md  legacy_agent.md  tutor.md
tests/: test_conversation.py  test_pricing.py  test_tools.py
tests/data/: custom_prices.yaml
