[project]
name = "pai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.51",
    "toml>=0.10.2",
    "typer>=0.16.0",
    "rich>=13.7.1",
    "ulid-py>=1.1.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "pandas>=2.2.2",
    "pydantic>=2.9.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  # convert legacy python syntax to modern syntax
  "UP",
  # isort imports
  "I",
]

[project.scripts]
pai = "pai.pai:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pai/"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

