[project]
name = "pai"
version = "0.1.0"
description = "Polyglot AI is an interactive, provider-agnostic CLI for interacting with any AI model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "prompt-toolkit>=3.0.51",
    "toml>=0.10.2",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "ulid-py>=1.1.0",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.1",
    "pydantic>=2.9.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  # convert legacy python syntax to modern syntax
  "UP",
  # isort imports
  "I",
]
ignore = ["E402"] # Ignore Module level import not at top of file

[project.scripts]
pai = "pai.pai:main"

[project.entry-points."polyglot_ai.protocols"]
openai_chat = "pai.protocols.openai_chat_adapter:OpenAIChatAdapter"
legacy_completion = "pai.protocols.legacy_completion_adapter:LegacyCompletionAdapter"
anthropic = "pai.protocols.anthropic_adapter:AnthropicAdapter"
ollama = "pai.protocols.ollama_adapter:OllamaAdapter"

[tool.hatch.build.targets.wheel]
packages = ["pai/"]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

# Note: this [dependency-groups] block IS THE CORRECT BLOCK FOR DEV DEPENDENCIES.
#       DO NOT REMOVE OR RENAME THIS BLOCK.
[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
